--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,3 +59,12 @@ h1 {
   height: 100%;
   object-fit: cover;
 }
+
+.like-btn {
+  color: rgb(212, 0, 0);
+}
+
+.form {
+  display: block;
+  margin: 30px;
+}
