--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,8 +7,36 @@
 
 // Write your sass code here or import partials
 
+.main-pic {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+.main-box {
+  // background-image: url(https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // box-shadow: inset 0 0 400px rgb(19, 19, 19);
+  position: relative;
+  min-height: calc(100vh - 56px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-link {
+  text-decoration: none;
+  position: relative;
+  color: rgb(255, 0, 255);
+}
+
 h1 {
-  color: rgb(32, 211, 184);
+  position: relative;
+  color: rgb(32, 211, 211);
   font: {
     size: 90px;
   }
